// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Deterministic Replay Regression > replays a real game using fastlane-replay-21-weeks.json 1`] = `
{
  "campaignId": "The Fast Lane — Improved Version (QoL)",
  "economicIndex": -30,
  "pawnShopItemsForSale": [],
  "phase": "setup",
  "players": [
    {
      "activeEffects": {
        "add_turn_happiness": 1,
        "computer_income_chance": 1,
        "prevent_relaxation_decay": 1,
        "set_food_storage": 12,
      },
      "bankSavings": 0,
      "currentHousingId": "security",
      "currentJobId": "blacks_butcher",
      "currentRentPrice": 237,
      "currentWage": 11,
      "degrees": [
        "trade_school",
        "junior_college",
        "pre_engineering",
        "engineering",
        "business_admin",
        "academic",
      ],
      "dependability": 53,
      "enrolledClasses": {
        "academic_req": 8,
        "business_admin_req": 8,
        "engineering_req": 8,
        "junior_college_req": 9,
        "pre_engineering_req": 9,
        "trade_school_req": 10,
      },
      "experience": 55,
      "goalAllotment": {
        "career": 25,
        "education": 25,
        "happiness": 25,
        "wealth": 25,
      },
      "happiness": 68,
      "hoursRemaining": 40,
      "id": "player_1",
      "inventory": {
        "appliances": [
          {
            "id": "refrigerator",
            "purchasePrice": 598,
            "purchaseSource": "socket_city",
          },
          {
            "id": "computer",
            "purchasePrice": 799,
            "purchaseSource": "socket_city",
          },
          {
            "id": "hot_tub",
            "purchasePrice": 627,
            "purchaseSource": "socket_city",
          },
          {
            "id": "freezer",
            "purchasePrice": 256,
            "purchaseSource": "socket_city",
          },
          {
            "id": "microwave",
            "purchasePrice": 165,
            "purchaseSource": "socket_city",
          },
        ],
        "books": [
          "atlas",
          "dictionary",
          "encyclopedia",
        ],
        "businessClothesWeeks": 0,
        "casualClothesWeeks": 0,
        "dressClothesWeeks": 0,
        "fastFoodItems": [],
        "freshFoodUnits": 0,
        "lotteryTickets": 0,
        "pawnedItems": [],
        "selectedClothes": "none",
        "stocks": {
          "holdings": {},
          "tBills": 0,
        },
        "tickets": {
          "baseball": 0,
          "concert": 0,
          "theatre": 0,
        },
      },
      "isAi": false,
      "loanDebt": 0,
      "loanPaymentDeadline": 0,
      "maxDependability": 70,
      "maxExperience": 50,
      "money": 0,
      "nakedTurns": 5,
      "name": "Player 1",
      "newspaperHeadline": {
        "key": "newspaper.random.4",
      },
      "position": "node_security",
      "raisesAtCurrentJob": 0,
      "relaxation": 14,
      "rentDebt": 237,
      "rentExtensionActive": false,
      "rentExtensionsDeniedPermanently": true,
      "rentExtensionsReceived": 0,
      "rentPaidUntilWeek": 23,
      "timesDefaulted": 0,
      "turnEvents": [
        {
          "key": "events.starvation",
        },
        {
          "key": "events.rent.charged",
          "params": {
            "amount": 237,
          },
        },
      ],
      "turnFlags": {
        "askedForExtension": false,
        "caffeineDebt": 0,
        "drinkHappinessGranted": false,
        "fastFoodHappinessGranted": false,
        "freeNewspaper": false,
        "freshFoodHappinessGranted": false,
        "hasEaten": false,
        "hasSeenEvents": false,
        "hasSeenWeekend": false,
        "hasWorked": false,
        "loanDefaultWarning": false,
        "loanPayableWarning": false,
        "rentPaidThisTurn": false,
      },
      "weekendResult": {
        "cost": 0,
        "event": {
          "key": "events.weekend.too_broke",
        },
      },
    },
  ],
  "rngState": 17982277761,
  "rules": {
    "allowEatingSpoiledFood": true,
    "allowEmployedRentPayment": false,
    "allowOverAchievingGoals": true,
    "allowPartialHours": true,
    "autoEquipBestClothes": true,
    "bypassDoctorIfBroke": false,
    "classicStockMarket": true,
    "clothingDecaysAll": true,
    "delayBookSetCredit": false,
    "enableAnimations": true,
    "enableRelaxationDoctor": true,
    "fluctuatingRent": false,
    "helpfulUI": true,
    "protectBuiltInAppliances": false,
    "relaxationDoctorThreshold": 10,
    "requireJobForLoan": true,
    "strictEviction": true,
  },
  "turn": 20,
  "winnerId": null,
}
`;

exports[`Deterministic Replay Regression > replays a recorded game exactly using test_replay.json 1`] = `
{
  "campaignId": "test_regression",
  "economicIndex": 10,
  "pawnShopItemsForSale": [],
  "phase": "playing",
  "players": [
    {
      "activeEffects": {},
      "bankSavings": 50,
      "currentHousingId": "low_cost",
      "currentJobId": "burger_cook",
      "currentRentPrice": 325,
      "currentWage": 5,
      "degrees": [],
      "dependability": 12,
      "enrolledClasses": {},
      "experience": 10,
      "goalAllotment": {
        "career": 50,
        "education": 50,
        "happiness": 50,
        "wealth": 50,
      },
      "happiness": 39,
      "hoursRemaining": 50,
      "id": "player_1",
      "inventory": {
        "appliances": [
          {
            "id": "refrigerator",
            "purchasePrice": 400,
            "purchaseSource": "socket_city",
          },
        ],
        "books": [],
        "businessClothesWeeks": 0,
        "casualClothesWeeks": 14,
        "dressClothesWeeks": 0,
        "fastFoodItems": [],
        "freshFoodUnits": 1,
        "lotteryTickets": 0,
        "pawnedItems": [],
        "selectedClothes": "casual",
        "stocks": {
          "holdings": {},
          "tBills": 1,
        },
        "tickets": {
          "baseball": 0,
          "concert": 0,
          "theatre": 0,
        },
      },
      "isAi": false,
      "loanDebt": 0,
      "loanPaymentDeadline": 0,
      "maxDependability": 40,
      "maxExperience": 20,
      "money": 0,
      "nakedTurns": 0,
      "name": "TestPlayer",
      "newspaperHeadline": {
        "key": "newspaper.random.3",
      },
      "position": "node_low_cost",
      "raisesAtCurrentJob": 0,
      "relaxation": 15,
      "rentDebt": 0,
      "rentExtensionActive": false,
      "rentExtensionsDeniedPermanently": false,
      "rentExtensionsReceived": 1,
      "rentPaidUntilWeek": 4,
      "timesDefaulted": 0,
      "turnEvents": [
        {
          "key": "events.foodSpoiled.ateSpoiled",
        },
        {
          "key": "events.foodSpoiled.sick",
        },
        {
          "key": "events.doctorVisit",
          "params": {
            "cost": 63,
          },
        },
        {
          "key": "events.rent.extensionExpired",
        },
      ],
      "turnFlags": {
        "askedForExtension": false,
        "caffeineDebt": 0,
        "drinkHappinessGranted": false,
        "fastFoodHappinessGranted": false,
        "freeNewspaper": false,
        "freshFoodHappinessGranted": false,
        "hasEaten": true,
        "hasSeenEvents": false,
        "hasSeenWeekend": false,
        "hasWorked": false,
        "loanDefaultWarning": false,
        "loanPayableWarning": false,
        "rentPaidThisTurn": false,
      },
      "weekendResult": {
        "cost": 12,
        "event": {
          "key": "events.weekend.random_1",
        },
        "happinessBonus": undefined,
      },
    },
  ],
  "rngState": 42,
  "rules": {
    "allowEatingSpoiledFood": true,
    "allowEmployedRentPayment": false,
    "allowOverAchievingGoals": false,
    "allowPartialHours": true,
    "autoEquipBestClothes": true,
    "bypassDoctorIfBroke": true,
    "classicStockMarket": true,
    "clothingDecaysAll": true,
    "delayBookSetCredit": true,
    "enableAnimations": false,
    "enableRelaxationDoctor": true,
    "fluctuatingRent": false,
    "helpfulUI": false,
    "protectBuiltInAppliances": false,
    "relaxationDoctorThreshold": 10,
    "requireJobForLoan": true,
    "strictEviction": true,
  },
  "turn": 5,
  "winnerId": null,
}
`;
